testdata/baselines/reference/submodule/conformance/checkJsxChildrenProperty2.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.
file.tsx(6,24): error TS2503: Cannot find namespace 'JSX'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (2 errors) ====
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface Prop {
        a: number,
        b: string,
        children: string | JSX.Element
                           ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
    }
    
    function Comp(p: Prop) {
        return <div>{p.b}</div>;
    }
    
    // Error: missing children
    let k = <Comp a={10} b="hi" />;
    
    let k0 =
        <Comp a={10} b="hi" children="Random" >
            hi hi hi!
        </Comp>;
    
    let o = {
         children:"Random"
    }
    let k1 =
        <Comp a={10} b="hi" {...o} >
            hi hi hi!
        </Comp>;
    
    // Error: incorrect type
    let k2 =
        <Comp a={10} b="hi">
            <div> My Div </div>
            {(name: string) => <div> My name {name} </div>}
        </Comp>;
    
    let k3 =
        <Comp a={10} b="hi">
            <div> My Div </div>
            {1000000}
        </Comp>;
    
    let k4 =
        <Comp a={10} b="hi" >
            <div> My Div </div>
            hi hi hi!
        </Comp>;
    
    let k5 =
        <Comp a={10} b="hi" >
            <div> My Div </div>
            <div> My Div </div>
        </Comp>;
    